--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,4 @@
 # The Docker image that will be used to build your app
-image: the_ham
+image: ruby:2.7
+# Functions that should be executed before the build script is run
+before_script: []
