--- a/public/.gitlab-ci.yml
+++ b/public/.gitlab-ci.yml
@@ -1,8 +1,14 @@
-image: ruby:2.7
+image: lechten/emacs-tex-org:v2
 
 pages:
+  stage: deploy
+  before_script:
+  - git submodule sync --recursive
+  - git submodule update --init --recursive
   script:
-    - gem install bundler
-    - bundle install
-    - bundle exec jekyll build -d public
-
+  - emacs --batch --load elisp/publish.el --funcall org-publish-all
+  artifacts:
+    paths:
+    - public
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
